# video_ai_subtitle

./: .gitignore  Makefile  README.md  pyproject.toml
configs/transcribe/: base.yaml  canary-qwen.yaml  distil-large-v3.yaml  granite-speech.yaml  large-v3-turbo.yaml  large-v3.yaml  low-vram.yaml  medium.yaml  openai-whisper.yaml  parakeet.yaml  quality.yaml  qwen3-asr.yaml  small.yaml  tiny.yaml  whisperx.yaml
configs/translate/: balanced.yaml  cloud-gemini.yaml  edge.yaml  fast.yaml  gemma4-flagship.yaml  ollama-12b.yaml  quality.yaml
offline_packages/: README.md  build_models.sh  build_packages.sh  download_1_ubuntu_packages.sh  download_2_python_packages.sh  download_3_models.sh  install.sh  install_1_ubuntu_packages.sh  install_2_python_packages.sh  install_3_models.sh  target.env
scripts/: install_online.sh  install_profile_a.sh  local_file_test.sh  stream_local_file.sh
src/vas/: __init__.py  cli.py  config.py  cuda_runtime.py  pipeline.py  segment.py  subtitle_io.py  types.py
src/vas/audio/: __init__.py  ffmpeg_args.py  ffmpeg_source.py  source.py  supervisor.py
src/vas/cues/: __init__.py  assembler.py
src/vas/transcribe/: __init__.py  base.py  canary_qwen.py  faster_whisper.py  granite_speech.py  openai_whisper.py  parakeet.py  qwen3_asr.py  trt_llm.py  whisper_cpp.py  whisperx_engine.py
src/vas/translate/: __init__.py  base.py  gemini_cloud.py  gemma_transformers.py  ollama_backend.py
src/vas/utils/: logging.py  timing.py
src/vas/vad/: __init__.py  base.py  silero.py
src/vas/writers/: __init__.py  base.py  srt.py  ttml.py  vtt.py
tests/: test_config.py  test_cues.py  test_ffmpeg_args.py  test_pipeline_paths.py  test_segment.py  test_subtitle_io.py  test_timing.py  test_translate.py  test_writers.py
tests/data/: README.md  score_wer.py  tedlium_5talks_en_manifest.tsv  tedlium_5talks_en_reference.txt
tests/fixtures/: README.md
