[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-ai-subtitle"
version = "0.1.0"
description = "Subtitle generation: ffmpeg + VAD + Whisper + Gemma -> SRT/TTML/VTT (file or MPEG2-TS)"
readme = "Readme.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "video_ai_subtitle" }]
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "onnxruntime>=1.17",
    "silero-vad>=5.1",
    "faster-whisper>=1.0.3",
]

[project.optional-dependencies]
# In-process Gemma translation (transformers backend).
translate = [
    "transformers>=4.45",
    "accelerate>=0.30",
    "torch>=2.2",
]
# 4-bit / 8-bit quantization for fitting larger Gemma models on consumer GPUs.
quant = ["bitsandbytes>=0.43"]
# whisper.cpp backend.
whispercpp = ["pywhispercpp>=1.2"]
# Cloud Gemini API translator.
gemini = ["google-genai>=1.0"]
# Aggregate "give me everything" extra.
all = [
    "transformers>=4.45",
    "accelerate>=0.30",
    "torch>=2.2",
    "bitsandbytes>=0.43",
    "pywhispercpp>=1.2",
    "google-genai>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
vas = "vas.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
