[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-ai-subtitle"
version = "0.1.0"
description = "Subtitle generation: ffmpeg + VAD + Whisper + Gemma -> SRT/TTML/VTT (file or MPEG2-TS)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "video_ai_subtitle" }]
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "onnxruntime>=1.17",
    "silero-vad>=5.1",
    "faster-whisper>=1.0.3",
    # ctranslate2 4.7+ ships CUDA 13 wheels; pin to the last CUDA 12 build so
    # users on driver-570 / CUDA 12.8 don't hit "libcudart.so.13: not found".
    "ctranslate2 >=4.5,<4.7",
    # CUDA runtime libs needed by CTranslate2 (faster-whisper). The wheel
    # itself doesn't bundle libcublas / libcudnn; we pull them via these
    # NVIDIA-published PyPI wheels so a system-wide CUDA toolkit isn't required.
    'nvidia-cublas-cu12 ; sys_platform == "linux"',
    'nvidia-cudnn-cu12 >=9,<10 ; sys_platform == "linux"',
]

[project.optional-dependencies]
# In-process Gemma translation (transformers backend).
translate = [
    "transformers>=4.45",
    "accelerate>=0.30",
    "torch>=2.2",
]
# 4-bit / 8-bit quantization for fitting larger Gemma models on consumer GPUs.
quant = ["bitsandbytes>=0.43"]
# whisper.cpp backend.
whispercpp = ["pywhispercpp>=1.2"]
# Cloud Gemini API translator.
gemini = ["google-genai>=1.0"]
# Aggregate "give me everything" extra.
all = [
    "transformers>=4.45",
    "accelerate>=0.30",
    "torch>=2.2",
    "bitsandbytes>=0.43",
    "pywhispercpp>=1.2",
    "google-genai>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
vas = "vas.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
